<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_client"
        android:icon="@drawable/client"
        android:title="@string/client" />

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/note"
        android:title="@string/foodweight" />
    <item
        android:id="@+id/navigation_volunteer"
        android:icon="@drawable/timer"
        android:title="@string/volunteer" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/about" />


</menu>
