<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home"
    android:background="#000000"
    tools:context="foodbank.themadf.themadf.HomeFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="50sp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#dc0505"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="300sp"
                android:layout_height="300sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:background="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/mission"
                android:textColor="#ffffff"
                android:textSize="@dimen/font"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/schedule"
                android:textColor="#18da45"
                android:textSize="@dimen/font3"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/hourform"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:text="@string/hour"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:text="@string/time"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/font" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space"
                android:text="@string/eloise"
                android:textColor="#dc0505"
                android:textSize="@dimen/font2"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/address"
                android:textColor="#dc0505"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/contact"
                android:textColor="#dc0505"
                android:textSize="@dimen/font"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/web"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic"></TextView>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
